function: saveCampaign, editCampaign and deleteCampaign

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>classlock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>classlock</name>
+    <name>Amcrid</name>
     <description>Projeto de gamificação</description>
 
     <properties>
