--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "axios": "0.24.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.3.0",
     "date-fns": "^2.28.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
